--- a/notes/templates/notes/category/category.html
+++ b/notes/templates/notes/category/category.html
@@ -85,5 +85,6 @@
     </body>
     <script src="http://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/neo4j-driver"></script>
-    <script src="../../../static/js/category_d3.js"></script>
+    <script src="../../../static/js/category_d3.js" type="module"></script>
+    <script src="../../../static/js/cxtmenu.js" type="module"></script>
 </html>
